# CarND-MPC

./: .gitignore  CMakeLists.txt  README.md
data/: waypoints.txt
python/: polyfit_and_errors.ipynb  pts.ipynb  waypoints_and_poses.ipynb
src/: Controller.h  Localizer.cpp  Localizer.h  MPC.cpp  MPC.h  client.cpp  client.h  example.cpp  geometry.cpp  geometry.h  main.cpp  model.cpp  model.h  play.cpp  plotsim.cpp  plotsim.h
